# OpenNI2_Wrapper

./: CMakeLists.txt  README.md  Viewer.cpp  main.cpp  opencl_kernel.cl  opencl_test.c  openni2_c.h  openni2_c_test.c  openni2_c_wrapper.cpp  openni2_c_wrapper.h  openni2_cffi.py  openni2_cpp.h  openni2_listener_wrapper.h  openni2_types.h  openni2_types_c.h  openni2_types_cxx.h  openni2_types_python.h  openni2_wrapper.cxx  openni2_wrapper.h
cmake_modules/: FindOpenCL.cmake
